feat&fix:rag知识库相关接口开发，修复rag advisor部分问题